Bug 363303 - midisequenceroutputthread.cpp - add #include <cmath> for gcc 6 compilation - midisequenceroutputthread.cpp:80:61: error: ‘floor’ was not declared in this scope
Summary: midisequenceroutputthread.cpp - add #include <cmath> for gcc 6 compilation - ...
Status: RESOLVED FIXED
Alias: None
Product: minuet
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Sandro Andrade
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-20 03:46 UTC by David Kredba
Modified: 2016-05-26 14:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Kredba 2016-05-20 03:46:06 UTC
[ 86%] Building CXX object src/CMakeFiles/minuet.dir/minuetsettings.cpp.o
cd /var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1_build/src && /usr/bin/x86_64-pc-linux-gnu-g++  -DKCOREADDONS_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_QML_LIB -DQT_QUICK_LIB -DQT_WIDGETS_LIB -DQT_XML_LIB -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -I/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1_build/src -I/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1/src -isystem /usr/include/qt5 -isystem /usr/include/qt5/QtCore -isystem /usr/lib64/qt5/mkspecs/linux-g++ -isystem /usr/include/qt5/QtGui -isystem /usr/include/qt5/QtWidgets -isystem /usr/include/qt5/QtQuick -isystem /usr/include/qt5/QtQml -isystem /usr/include/qt5/QtNetwork -isystem /usr/include/KF5/KI18n -isystem /usr/include/KF5 -isystem /usr/include/KF5/KXmlGui -isystem /usr/include/qt5/QtDBus -isystem /usr/include/qt5/QtXml -isystem /usr/include/KF5/KConfigCore -isystem /usr/include/KF5/KConfigWidgets -isystem /usr/include/KF5/KCodecs -isystem /usr/include/KF5/KWidgetsAddons -isystem /usr/include/KF5/KConfigGui -isystem /usr/include/KF5/KAuth -isystem /usr/include/KF5/KCoreAddons -isystem /usr/include/KF5/KIOWidgets -isystem /usr/include/KF5/KIOCore -isystem /usr/include/KF5/KService -isystem /usr/include/KF5/KJobWidgets -isystem /usr/include/KF5/KCompletion -isystem /usr/include/KF5/KCrash   -DQT_NO_DEBUG -DNDEBUG -O2 -march=core2 -ggdb -pipe -flto=4 -fuse-linker-plugin  -std=c++0x -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -fexceptions   -fPIC -o CMakeFiles/minuet.dir/minuetsettings.cpp.o -c /var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1_build/src/minuetsettings.cpp
/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1/src/midisequenceroutputthread.cpp: In member function ‘virtual drumstick::SequencerEvent* MidiSequencerOutputThread::nextEvent()’:
/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1/src/midisequenceroutputthread.cpp:80:61: error: ‘floor’ was not declared in this scope
                 value = floor(value * m_volumeFactor / 100.0);
                                                             ^
/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1/src/midisequenceroutputthread.cpp: In member function ‘void MidiSequencerOutputThread::setVolumeFactor(unsigned int)’:
/var/tmp/portage/kde-apps/minuet-16.04.1/work/minuet-16.04.1/src/midisequenceroutputthread.cpp:110:53: error: ‘floor’ was not declared in this scope
         value = floor(value * m_volumeFactor / 100.0);
                                                     ^


Reproducible: Always

Steps to Reproduce:
1. Use gcc 6 to compile minuet 16.04.1
2.
3.
Comment 1 Sandro Andrade 2016-05-26 14:32:14 UTC
Git commit 29be98835452d2bfcd6679f56c449832728be359 by Sandro S. Andrade.
Committed on 26/05/2016 at 14:22.
Pushed by sandroandrade into branch 'Applications/16.04'.

Fix cmath include error when building with gcc6
FIXED-IN: 16.04.2

M  +2    -2    CMakeLists.txt
M  +2    -0    src/midisequenceroutputthread.cpp

http://commits.kde.org/minuet/29be98835452d2bfcd6679f56c449832728be359