Fix cmath include error when building with gcc6

BUG: 363303
FIXED-IN: 16.04.2